--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,18 @@
     }
   </script>
 </head>
-<body>
+<body >
+  <div id="preloadernew">
+    <div style="display: block !important;">
+        <div id="cms-loadding">
+            <div class="loading-spinner">
+                <div class="cms-bounce1"></div>
+                <div class="cms-bounce2"></div>
+                <div class="cms-bounce3"></div>
+            </div>
+        </div>
+    </div>
+ </div>
   <app-root></app-root>
 </body>
 </html>
