--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>DCC Animal Hospital</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <meta name ="robots" content="robots">
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
